tdf#90904 DOCX export metadata for "Pages", "Word count", "Character count"

/oox/source/core/xmlfilterbase.cxx: writeAppProperties modified.
Stats are extracted from DocumentProperties->DocumentStatistics.
No stat counter found for the lines of text

Change-Id: Ibc2e848a97776f65f0bfd4a880e5279e9c507dd0